--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/live3d.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/live3d.config
@@ -12,7 +12,7 @@
 						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR" valueName="CURRENTVERSION" value="4.08 (en)" valueKind="String" />
 						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\4.08 (EN)\MAIN" valueName="INSTALL DIRECTORY" value="%FP_STARTUP_PATH%\Netscape4\Communicator" valueKind="String" />
 						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\4.08 (EN)\MAIN" valueName="JAVA DIRECTORY" value="%FP_STARTUP_PATH%\Netscape4\Communicator\Program\Java" valueKind="String" />
-						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\4.08 (EN)\MAIN" valueName="NETHELP DIRECTORY" value="%FP_STARTUP_PATH%\Netscape4\Communicator\Progra\NetHelp" valueKind="String" />
+						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\4.08 (EN)\MAIN" valueName="NETHELP DIRECTORY" value="%FP_STARTUP_PATH%\Netscape4\Communicator\Program\NetHelp" valueKind="String" />
 						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\4.08 (EN)\MAIN" valueName="PLUGINS DIRECTORY" value="%FP_STARTUP_PATH%\Netscape4\Communicator\Program\Plugins" valueKind="String" />
 						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\4.08 (EN)\MAIN" valueName="PROGRAM FOLDER" value="Netscape Navigator" valueKind="String" />
 						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\NETSCAPE\NETSCAPE NAVIGATOR\USERS" valueName="CURRENTUSER" value="default" valueKind="String" />
