--- a/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/svrbasilisk.config
+++ b/FlashpointSecurePlayer/FlashpointSecurePlayerConfigs/svrbasilisk.config
@@ -5,8 +5,8 @@
     </configSections>
     <flashpointSecurePlayer>
 		<templates>
-			<template name="svr">
-				<mode name="WEB_BROWSER" webBrowserName="INTERNET_EXPLORER" workingDirectory="%FP_STARTUP_PATH%\SVR\SVR\SVR" />
+			<template name="svrbasilisk">
+				<mode name="SOFTWARE" commandLine="Basilisk-Portable\Basilisk-Portable.exe &quot;%FP_URL%&quot;" />
 				<modifications>
 					<registryStates binaryType="SCS_32BIT_BINARY">
 						<registryState type="VALUE" keyName="HKEY_LOCAL_MACHINE\SOFTWARE\CLASSES\TYPELIB\{96D94336-BF1E-11D1-8322-0020AF998C79}\1.0"
@@ -213,6 +213,7 @@
 						<registryState type="VALUE" keyName="HKEY_CURRENT_USER\SOFTWARE\SUPERSCAPE\SUPERSCAPE VISCAPE\PREFERENCES"
 							valueName="TEMPDIR" value="..\..\..\SVR\SVR\SVR\Temp" valueKind="String" />
 					</registryStates>
+					<singleInstance executable="basilisk.exe" strict="false" />
 					<oldCPUSimulator targetRate="200" />
 				</modifications>
 			</template>
